[package]
name = "monoverse"
version = "24.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["derive"] }
config = "0.13.4"
git2 = "0.18.1"
log = "0.4.20"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
stderrlog = { version = "0.5.4", default-features = false }
thiserror = "1.0.56"
toml_edit = "0.21.0"
