[package]
name = "monoverse"
version = "0.1.4"
edition = "2021"
authors = ["Janne Kemppainen"]
description = "A CLI tool for managing version numbers in monorepos."
license = "Apache-2.0"
repository = "https://github.com/jannekem/monoverse"
readme = "README.md"
keywords = ["version", "monorepo", "cli"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
config = "0.13.4"
git2 = "0.18.1"
libyaml-safer = "0.1.1"
log = "0.4.20"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
stderrlog = { version = "0.5.4", default-features = false }
thiserror = "1.0.56"
toml_edit = "0.21.0"
